syntax = "proto3";
package gogger;
option go_package = "./internal/entity/proto";
import "google/protobuf/timestamp.proto";

message AccessLog {
    google.protobuf.Timestamp timestamp = 1;
    bool isNormalMode = 2;
    bool isLogin = 3;
    string userName = 4;
    string deviceName = 5;
    string ip = 6;
}